--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "nyayasetu-mvp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Sreevalsan-V.github.io/NyayaSetu",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1"
   },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build"
   },
   "eslintConfig": {
